--- a/bin/src/main/resources/templates/template.html
+++ b/bin/src/main/resources/templates/template.html
@@ -3,7 +3,7 @@
 <head th:fragment="dochead">
 	<link th:href="@{/css/normalize.css}" rel="stylesheet" />
 	<link th:href="@{/css/styles.css}" rel="stylesheet" />
-	<title>Arena</title>
+	<title>Blogz</title>
 </head>
 
 <body>
@@ -14,9 +14,9 @@
 	    <li><a href="/logout">logout</a></li>
 	</ul>
 	<ul>
-        <li><a href="/">Trainers Home</a></li>
-        <li><a href="/trainers">Arena Gladiators</a></li>
-        <li><a href="/trainers/creator">New Gladiator</a></li>
+        <li><a href="/">home</a></li>
+        <li><a href="/blog">all posts</a></li>
+        <li><a href="/blog/newpost">new post</a></li>
     </ul>
 </nav>
 
